@@ -1148,3 +1148,6 @@ sstarted these clone on 12th of July, 2019
 [uuk]: removed naming-folder from tag system
 [uuk]: logger is now pre-fixing everything with the time printed out
 [uuk]: changed how exceptions are formatted
+[uuk]: implemented the following loot table conditions: minecraft:block_state_property,
+       minecraft:damage_source_properties
+[uuk]: added DamageSource-class
