@@ -55,6 +55,8 @@ changelog of snapshot [next]
     - added data gen system for textures
     - changed order of loading stages to be more functional
     - changed some logging systems
+    - implemented two new loot table conditions: minecraft:block_state_property and minecraft:damage_source_properties
+    - added DamageSource class
 
     fixed issues:
         long-term issues:
